# qemu_rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs  utils.rs
src/command/: builder.rs
src/configuration/general/: accel.rs  add_fd.rs  audio.rs  boot.rs  config.rs  device.rs  global.rs  language.rs  machine.rs  memory.rs  mod.rs  name.rs  numa.rs  set.rs  smp.rs
src/configuration/general/cpus/: x86_64.rs
src/configuration/general/machine_list/: x86_64.rs
test_json/: config.json  memory.json
