[package]
name = "qemu_rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Xue Haonan <xuehaonan27@gmail.com>"]
description = "A crate for communicating with qemu for the development of PKU-cloud."
repository = "https://github.com/xuehaonan27/qemu_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
